--- a/CleanArch.Presentation/Views/Products/Index.cshtml
+++ b/CleanArch.Presentation/Views/Products/Index.cshtml
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-</div>
+</div><br />
 
 <div class="panel panel-default">
     <table class="table table-striped">
